hphp/test/zend/good/ext-standard-array/bug24198.php
<?php
$c = array('a' => 'aa','b' => 'bb'); 

var_dump(array_merge_recursive($c, $c)); 
?>