hphp/test/zend/bad/zend/indirect_call_array_002.php
<?php

$arr = array('stdclass', 'b');
$arr();

?>